docs: Add java 10 jvm args to readme